Anpassen der Formatvorlage

--- a/ausarbeitung.tex
+++ b/ausarbeitung.tex
@@ -63,13 +63,13 @@
 \large
 \begin{center}
 {\Large Seminarausarbeitung} \\[1ex]
-{\LARGE\textbf{Titel der Ausarbeitung}}\\[3ex]
-Name des Seminarteilnehmers\\[1ex]
+{\LARGE\textbf{On the Power of Color Refinement}}\\[3ex]
+Florian Lüdiger\\[1ex]
 \today\\[7ex]
 im Rahmen des Seminars\\[1ex]
 {\Large\textbf{Algorithm Engineering}}\\[1ex]
 von Prof.~Dr.~Petra Mutzel\\[1ex]
-Wintersemester 2012/13
+Wintersemester 2016/17
 \end{center}
 
 \vspace*{4cm}
@@ -77,10 +77,12 @@ Wintersemester 2012/13
 \begin{minipage}[b]{15cm}
 \normalsize \raggedright
 \textbf{Betreuer:} \\
-Name des Betreuers \\[2ex]
+Christopher Morris \\[2ex]
 
 \textbf{Basierend auf:}\\
-Autoren, Titel des Papers, Quelle
+V. Arvind, Johannes Köbler, Gaurav Rattan und Oleg Verbitsky\\
+On the Power of Color Refinement\\
+\url{https://link.springer.com/chapter/10.1007/978-3-319-22177-9_26}
 \end{minipage}
 
 \definecolor{TUGreen}{rgb}{0.517,0.721,0.094}
@@ -109,29 +111,30 @@ Technische Universität Dortmund
 
 \section{Einführung}
 
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
-magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
-gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
-elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos
-et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor
-sit amet.
+\section{Graph-Isomorphie und Color Refinement}
+
+\section{Voraussetzungen für zugängliche Graphen}
+
+\section{Anwendungsgebiete}
+
+\section{Fazit}
 
 
-\subsection{Beispiele für Referenzen}
-
-\begin{itemize}
- \item Die starken Zusammenhangskomponenten eines gerichteten Graphen können in Linearzeit bestimmt werden~\citep{Tar72}.
- \item \citet{Tar72} hat gezeigt, dass \dots
-\end{itemize}
-
-
-\subsection{Theorem-Umgebung}
-
-% Vordefinierte Umgebungen:
-% Theorem, Lemma, Proposition, Satz, Korollar, Definition, Beispiel, Anmerkung, Bemerkung, Beweis
-\begin{Theorem}[Optionaler Titel]
- Aussage.
-\end{Theorem}
+%\subsection{Beispiele für Referenzen}
+%
+%\begin{itemize}
+% \item Die starken Zusammenhangskomponenten eines gerichteten Graphen können in Linearzeit bestimmt werden~\citep{Tar72}.
+% \item \citet{Tar72} hat gezeigt, dass \dots
+%\end{itemize}
+%
+%
+%\subsection{Theorem-Umgebung}
+%
+%% Vordefinierte Umgebungen:
+%% Theorem, Lemma, Proposition, Satz, Korollar, Definition, Beispiel, Anmerkung, Bemerkung, Beweis
+%\begin{Theorem}[Optionaler Titel]
+% Aussage.
+%\end{Theorem}
 
 
 %------------------------------------------------
