--- a/literatur.bib
+++ b/literatur.bib
@@ -1,5 +1,5 @@
 
-@article{Tar72
+article{Tar72
 , author =      "R. E. Tarjan"
 , title =       "Depth-first search and linear graph algorithms"
 , journal =     "SIAM Journal on Computing"
