Hinzufügen einer groben Übersicht des Inahltes einzelner Kapitel

--- a/ausarbeitung.tex
+++ b/ausarbeitung.tex
@@ -32,6 +32,7 @@
 \usepackage[section,boxed]{algorithm}                       % Floating-Umgebung für Algorithmen
 \usepackage{algpseudocode}                                  % Pseudocode für Algorithmen
 \usepackage[standard]{ntheorem}                             % Theorem-Umgebung
+\usepackage{mathtools}										% Tools zum Anzeigen von Formeln
 
 \captionsetup{farskip=10pt,topadjust=0pt,captionskip=10pt,nearskip=0pt,margin=10pt}
 
@@ -69,7 +70,7 @@ Florian Lüdiger\\[1ex]
 im Rahmen des Seminars\\[1ex]
 {\Large\textbf{Algorithm Engineering}}\\[1ex]
 von Prof.~Dr.~Petra Mutzel\\[1ex]
-Wintersemester 2016/17
+Wintersemester 2017/18
 \end{center}
 
 \vspace*{4cm}
@@ -113,11 +114,13 @@ Technische Universität Dortmund
 
 \input{sec/gi_cr}
 
+\input{sec/begriffe}
+
 \input{sec/voraussetzungen}
 
 \input{sec/beweis}
 
-\input{sec/anwendungsgebiete}
+\input{sec/laufzeit}
 
 \input{sec/fazit}
 
