--- a/sec/einfuehrung.tex
+++ b/sec/einfuehrung.tex
@@ -1,1 +1,7 @@
 \section{Einführung}
+
+\begin{itemize}
+	\item Allgemeine Informationen zum Paper
+	\item Was ist das Ziel der Forschung und inwiefern wurde dieses erreicht?
+	\item Überblick über die Kapitelstruktur
+\end{itemize}
