--- a/sec/fazit.tex
+++ b/sec/fazit.tex
@@ -1,1 +1,7 @@
 \section{Fazit}
+
+\begin{itemize}
+	\item Zusammenfassung der Ergebnisse
+	\item Bezugnehmen auf die Einleitung und ob die Ziele erreicht wurden
+	\item Abschluss der Arbeit
+\end{itemize}
