--- a/sec/gi_cr.tex
+++ b/sec/gi_cr.tex
@@ -1,1 +1,9 @@
 \section{Graph-Isomorphie und Color Refinement}
+
+\begin{itemize}
+	\item Basierend auf den Vorlesungsfolien von Prof. Mutzel im Fach Algorithmen und Datenstrukturen
+	\item Was ist Graph-Isomorphie?
+	\item Was erreicht Color Refinement?
+	\item Laufzeitkomplexität von Color-Refinement im Gegensatz zum vollständigen Isomorphie Test [7,4] im Paper
+	\item Wofür kann Color-Refinement noch eingesetzt werden? [9,12,17] im Paper
+\end{itemize}
