--- a/sec/voraussetzungen.tex
+++ b/sec/voraussetzungen.tex
@@ -1,1 +1,7 @@
 \section{Voraussetzungen für zugängliche Graphen}
+
+\begin{itemize}
+	\item Erklärung der lokalen Struktur zugänglicher Graphen (A,B)
+	\item Erklärung der globalen Struktur zugänglicher Graphen (C,D,E,F,G,H)
+	\item jeweils gegebenenfalls mit ausführlicher Erklärung der Bedeutung und Beispielen
+\end{itemize}
