--- a/sec/beweis.tex
+++ b/sec/beweis.tex
@@ -1,1 +1,6 @@
 \section{Korrektheitsbeweis}
+
+\begin{itemize}
+	\item Fokussierung auf die Beweisidee für die jeweiligen Lemmata
+	\item Ausführlichere und leichter verständliche Aufbereitung der Beweise aus dem Paper
+\end{itemize}
