Fertigstellen des Ausarbeitungskonzepts

--- a/ausarbeitung.tex
+++ b/ausarbeitung.tex
@@ -63,7 +63,7 @@
 
 \large
 \begin{center}
-{\Large Seminarausarbeitung} \\[1ex]
+{\Large Seminarausarbeitungskonzept} \\[1ex]
 {\LARGE\textbf{On the Power of Color Refinement}}\\[3ex]
 Florian Lüdiger\\[1ex]
 \today\\[7ex]
@@ -112,13 +112,13 @@ Technische Universität Dortmund
 
 \input{sec/einfuehrung}
 
-\input{sec/gi_cr}
-
 \input{sec/begriffe}
 
-\input{sec/voraussetzungen}
+\input{sec/gi_cr}
 
-\input{sec/beweis}
+\input{sec/struktur_lokal}
+
+\input{sec/struktur_global}
 
 \input{sec/laufzeit}
 
