--- a/sec/begriffe.tex
+++ b/sec/begriffe.tex
@@ -1,4 +1,5 @@
 \section{Begriffserklärung}
+\label{sec/begriffe}
 
 Einführung, Wiederholung und Erklärung folgender Begriffe und Notationen:
 \begin{itemize}
