--- a/sec/gi_cr.tex
+++ b/sec/gi_cr.tex
@@ -1,4 +1,5 @@
 \section{Graph-Isomorphie und Color Refinement}
+\label{sec/gi_cr}
 
 \begin{itemize}
 	\item Basierend auf den Vorlesungsfolien von Prof. Mutzel im Fach Algorithmen und Datenstrukturen
