Füllen des Kapitels Graph-Isomorphie und Color Refinement

--- a/ausarbeitung.tex
+++ b/ausarbeitung.tex
@@ -48,6 +48,10 @@
 \renewcommand{\glstextformat}[1]{\textit{#1}}
 \makenoidxglossaries
 
+% Definieren von mathematischen Symbolen
+\newcommand*{\ldblbrace}{\{\mskip-5mu\{}	% {{
+\newcommand*{\rdblbrace}{\}\mskip-5mu\}}	% }}
+
 \input{./ressources/glossary}
 
 \begin{document}
