--- a/literatur.bib
+++ b/literatur.bib
@@ -1,11 +1,70 @@
-
-article{Tar72
-, author =      "R. E. Tarjan"
-, title =       "Depth-first search and linear graph algorithms"
-, journal =     "SIAM Journal on Computing"
-, volume =      1
-, number =      2
-, year =        1972
-, pages =       "146-160"
-, doi =         "10.1137/0201010"
+@Inbook{Grohe2014,
+	author="Grohe, Martin
+	and Kersting, Kristian
+	and Mladenov, Martin
+	and Selman, Erkal",
+	editor="Schulz, Andreas S.
+	and Wagner, Dorothea",
+	title="Dimension Reduction via Colour Refinement",
+	bookTitle="Algorithms - ESA 2014: 22th Annual European Symposium, Wroclaw, Poland, September 8-10, 2014. Proceedings",
+	year="2014",
+	publisher="Springer Berlin Heidelberg",
+	address="Berlin, Heidelberg",
+	pages="505--516",
+	isbn="978-3-662-44777-2",
+	doi="10.1007/978-3-662-44777-2_42",
+	url="https://doi.org/10.1007/978-3-662-44777-2_42"
 }
+
+@article{shervashidze2011weisfeiler,
+	title={Weisfeiler-lehman graph kernels},
+	author={Shervashidze, Nino and Schweitzer, Pascal and Leeuwen, Erik Jan van and Mehlhorn, Kurt and Borgwardt, Karsten M},
+	journal={Journal of Machine Learning Research},
+	volume={12},
+	number={Sep},
+	pages={2539--2561},
+	year={2011}
+}
+
+@inproceedings{kersting2014power,
+	title={Power Iterated Color Refinement.},
+	author={Kersting, Kristian and Mladenov, Martin and Garnett, Roman and Grohe, Martin},
+	year={2014},
+	pages={1904-1910},
+	booktitle={Prooceedings of the Twenty-Eigth AAAI Conference on Artificial Intelligence},
+	publisher={AAAI Press}
+}
+
+@article{MCKAY201494,
+	title = "Practical graph isomorphism, II",
+	journal = "Journal of Symbolic Computation",
+	volume = "60",
+	number = "Supplement C",
+	pages = "94 - 112",
+	year = "2014",
+	issn = "0747-7171",
+	doi = "https://doi.org/10.1016/j.jsc.2013.09.003",
+	url = "http://www.sciencedirect.com/science/article/pii/S0747717113001193",
+	author = "Brendan D. McKay and Adolfo Piperno",
+	keywords = "Graph isomorphism, Canonical labelling, Nauty, Traces, Partition refinement"
+}
+
+@article{Goldreich1991,
+	author = {Goldreich, Oded and Micali, Silvio and Wigderson, Avi},
+	title = {Proofs That Yield Nothing but Their Validity or All Languages in NP Have Zero-knowledge Proof Systems},
+	journal = {J. ACM},
+	issue_date = {July 1991},
+	volume = {38},
+	number = {3},
+	month = jul,
+	year = {1991},
+	issn = {0004-5411},
+	pages = {690--728},
+	numpages = {39},
+	url = {http://doi.acm.org/10.1145/116825.116852},
+	doi = {10.1145/116825.116852},
+	acmid = {116852},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+	keywords = {NP, cryptographic protocols, fault tolerant distributed computing, graph isomorphism, interactive proofs, methodological design of protocols, one-way functions, proof systems, zero-knowledge},
+} 
