--- a/ressources/glossary.tex
+++ b/ressources/glossary.tex
@@ -2,7 +2,7 @@
 %\newacronym[description={}]{label}{kurz}{lang}
 \newglossaryentry{regulaerer_graph}{name={regulärer Graph},description={Ein Graph ist regulär wenn alle seine Knoten den gleichen Grad besitzen}}
 \newglossaryentry{unigraph}{name={Unigraph},description={Die Isomorphieeigenschaften eines Unigraphen sind durch die Sequenz der Knotengrade genau definiert. Dies bedeutet, dass allein anhand der Knotengrade zweier Unigraphen bestimmt werden kann, ob diese isomorph sind}}
-\newglossaryentry{nachbarschaft}{name={Nachbarschaft},description={Die Nachbarschaft $N(u)$ bildet die Menge der Knoten, die adjazent zu $u\in V(G)$ sind}}
+\newglossaryentry{nachbarschaft}{name={Nachbarschaft},description={Die Nachbarschaft $N(u)$ bildet die Menge der Knoten, die adjazent zu $u\in V(G)$ sind},plural={Nachbarschaften}}
 \newglossaryentry{subgraph}{name={Subgraph},description={Der Subgraph $G[X]$ ist ein Teilgraph von $G$, der durch die Knotenmenge $X\subseteq V(G)$ und deren inzidenten Kanten gebildet wird}}
 \newglossaryentry{bipartiter_graph}{name={bipartiter Graph},description={Ein Graph heißt bipartit, wenn sich seine Knoten in zwei Teilmengen aufteilen lassen, sodass Kanten nur zwischen den beiden Mengen aber nicht innerhalb existieren. $G[X,Y]$ ist der bipartite Graph, welcher durch die beiden disjunkten Teilmengen $X,Y\subseteq V(G)$ und allen Kanten, die Knoten aus $X$ und $Y$ verbinden, gebildet wird}}
 \newglossaryentry{disjunkte_vereinigung}{name={disjunkte Vereinigung},description={Die knotendisjunkte Vereinigung von $G$ und $H$ wird $G+H$ genannt. Die disjunkte Vereinigung von $m$ Kopien des Graphen $G$ wird als $mG$ geschrieben}}
@@ -10,6 +10,6 @@
 \newglossaryentry{biregulaerer_graph}{name={biregulärer Graph},description={Ein bipartiter Graph $G$ mit Knotenklassen $X$ und $Y$ ist biregulär, wenn alle Knoten in $X$ und $Y$ den gleichen Grad besitzen}}
 \newglossaryentry{vollstaendiger_graph}{name={vollständiger Graph},description={In einem vollständigen Graphen $K_n$ mit $n$ Knoten, ist jeder Knoten mit jedem anderen Knoten verbunden und besitzt somit den Grad $n-1$}}
 \newglossaryentry{zyklus}{name={Zyklus},description={Ein geschlossener Pfad eines Graphen über $n$ Knoten wird Zyklus $C_n$ genannt}}
-\newglossaryentry{multimenge}{name={Multimenge},description={Eine Multimenge unterscheidet eine Menge dadurch, dass Elemente mehrfach vorkommen können. Multimengen werden hier durch doppelte geschweifte Klammern ${{}}$ dargestellt}}
+\newglossaryentry{multimenge}{name={Multimenge},description={Eine Multimenge unterscheidet eine Menge dadurch, dass Elemente mehrfach vorkommen können. Multimengen werden hier durch doppelte geschweifte Klammern ${{}}$ dargestellt},plural={Multimengen}}
 \newglossaryentry{matching_graph}{name={matching Graph},description={Ein matching Graph ist ein Graph, bei dem kein Knoten mehr als eine inzidente Kante besitzt. Somit gibt es nur Zusammenhangskomponenten mit maximal einer Kante und zwei Knoten}}
 \newglossaryentry{hypergraph}{name={Hypergraph},description={Ein Hypergraph ist ein Graph, in dem eine Kante, auch Hyperkante genannt, mehr als zwei Knoten verbinden kann}}
