Kleinere Anpassungen der Struktur; Einführen des Begriffs CR-Graph

--- a/ausarbeitung.tex
+++ b/ausarbeitung.tex
@@ -134,7 +134,7 @@ Technische Universität Dortmund
 
 \input{sec/struktur_global}
 
-\input{sec/laufzeit}
+\input{sec/ergebnis}
 
 \input{sec/fazit}
 
