--- a/literatur.bib
+++ b/literatur.bib
@@ -68,3 +68,22 @@
 	address = {New York, NY, USA},
 	keywords = {NP, cryptographic protocols, fault tolerant distributed computing, graph isomorphism, interactive proofs, methodological design of protocols, one-way functions, proof systems, zero-knowledge},
 } 
+
+@Inbook{Arvind2015,
+	author="Arvind, V.
+	and K{\"o}bler, Johannes
+	and Rattan, Gaurav
+	and Verbitsky, Oleg",
+	editor="Kosowski, Adrian
+	and Walukiewicz, Igor",
+	title="On the Power of Color Refinement",
+	bookTitle="Fundamentals of Computation Theory: 20th International Symposium, FCT 2015, Gda{\'{n}}sk, Poland, August 17-19, 2015, Proceedings",
+	year="2015",
+	publisher="Springer International Publishing",
+	address="Cham",
+	pages="339--350",
+	isbn="978-3-319-22177-9",
+	doi="10.1007/978-3-319-22177-9_26",
+	url="https://doi.org/10.1007/978-3-319-22177-9_26"
+}
+
