--- a/sec/struktur_global.tex
+++ b/sec/struktur_global.tex
@@ -1,4 +1,4 @@
-\section{Globale Struktur zugänglicher Graphen}
+\section{Globale Struktur von CR-Graphen}
 \label{sec/struktur_global}
 
 \begin{itemize}
