--- a/sec/struktur_lokal.tex
+++ b/sec/struktur_lokal.tex
@@ -1,4 +1,4 @@
-\section{Lokale Struktur zugänglicher Graphen}
+\section{Lokale Struktur von CR-Graphen}
 \label{sec/struktur_lokal}
 
 \begin{itemize}
