Einfügen der Grundaussage des Kapitels Lokale Struktur von CR-Graphen

--- a/ausarbeitung.tex
+++ b/ausarbeitung.tex
@@ -34,6 +34,7 @@
 \usepackage[standard]{ntheorem}                             % Theorem-Umgebung
 \usepackage{mathtools}										% Tools zum Anzeigen von Formeln
 \usepackage[nogroupskip,style=altlist]{glossaries}			% Verwaltung des Glossars
+\usepackage{enumitem}										% Erweiterte Funktionen der enumerate Umgebung
 
 \captionsetup{farskip=10pt,topadjust=0pt,captionskip=10pt,nearskip=0pt,margin=10pt}
 
