--- a/sec/gi_cr.tex
+++ b/sec/gi_cr.tex
@@ -72,4 +72,5 @@ Das Überprüfen dieser Bedingung ist in endlicher Zeit berechenbar. Für einen 
 Aus den gewonnenen Erkenntnissen ergibt sich folgende Erweiterung zu Definition \ref{def:cr-graph1}.
 \begin{Definition}
 	Ein Graph $G$ wird \emph{CR-Graph} genannt, wenn für jeden beliebigen, nicht isomorphen Graphen $H$ die Gleichung (\ref{eq:2}) für $i=n$ nicht erfüllt ist.
+	\label{def:cr-graph2}
 \end{Definition}
