--- a/ressources/glossary.tex
+++ b/ressources/glossary.tex
@@ -9,7 +9,10 @@
 \newglossaryentry{bipartites_komplement}{name={bipartites Komplement},description={Das bipartite Komplement eines Graphen $G$ mit Knotenklassen $X$ und $Y$ stellt der bipartite Graph $G'$ dar, welcher die selben Knotenklassen enthält, allerdings das Komplement der Kanten zwischen den beiden Knotenklassen}}
 \newglossaryentry{biregulaerer_graph}{name={biregulärer Graph},description={Ein bipartiter Graph $G$ mit Knotenklassen $X$ und $Y$ ist biregulär, wenn alle Knoten in $X$ und $Y$ den gleichen Grad besitzen}}
 \newglossaryentry{vollstaendiger_graph}{name={vollständiger Graph},description={In einem vollständigen Graphen $K_n$ mit $n$ Knoten, ist jeder Knoten mit jedem anderen Knoten verbunden und besitzt somit den Grad $n-1$}}
+\newglossaryentry{vollstaendiger_bipartiter_graph}{name={vollständiger bipartiter Graph},description={In einem vollständigen bipartiten Graphen mit den Knotenmengen $X$ und $Y$ sind alle Knoten aus $X$ mit allen Knoten aus $Y$ verbunden. Somit haben alle Knoten aus $X$ den Grad $|Y|$ und alle Knoten aus $Y$ den Grad $|X|$}}
 \newglossaryentry{zyklus}{name={Zyklus},description={Ein geschlossener Pfad eines Graphen über $n$ Knoten wird Zyklus $C_n$ genannt}}
 \newglossaryentry{multimenge}{name={Multimenge},description={Eine Multimenge unterscheidet eine Menge dadurch, dass Elemente mehrfach vorkommen können. Multimengen werden hier durch doppelte geschweifte Klammern ${{}}$ dargestellt},plural={Multimengen}}
 \newglossaryentry{matching_graph}{name={matching Graph},description={Ein matching Graph ist ein Graph, bei dem kein Knoten mehr als eine inzidente Kante besitzt. Somit gibt es nur Zusammenhangskomponenten mit maximal einer Kante und zwei Knoten}}
 \newglossaryentry{hypergraph}{name={Hypergraph},description={Ein Hypergraph ist ein Graph, in dem eine Kante, auch Hyperkante genannt, mehr als zwei Knoten verbinden kann}}
+\newglossaryentry{stern}{name={Stern},description={In einem Sterngraphen $K_{1,t}$ gibt es einen zentralen Knoten, welcher mit allen anderen Knoten des Graphen, $t$ an der Zahl, durch eine Kante verbunden ist. Die anderen Knoten sind untereinander nicht verbunden}}
+\newglossaryentry{disjunkte_vereinigung_von_sternen}{name={disjunkte Vereinigung von Sternen},description={Bei einer \glslink{disjunkte_vereinigung}{disjunkten Vereinigung} von \glslink{stern}{Sternen} $sK_{1,t}$ bezeichnet $s$ die Anzahl der Sterne und $t$ die Anzahl der äußeren Knoten jedes Sterns}}
