Überarbeiten der Dateien um das diffen zu erleichtern

--- a/sec/struktur_lokal.tex
+++ b/sec/struktur_lokal.tex
@@ -8,7 +8,8 @@
 %	\item Ausführlichere und leichter verständliche Aufbereitung einiger oder aller Beweise aus dem Paper
 %\end{itemize}
 
-Um schlussendlich die Frage beantworten zu können von welcher Beschaffenheit CR-Graphen sein müssen, damit sie die in Definition \ref{def:cr-graph2} genannte Eigenschaft erfüllen, werden hier zunächst notwendige, lokale Eigenschaften solcher Graphen vorgestellt. Die Basis dieses Kapitels bildet das folgende Lemma, welches für die Zellen $X$ und $Y$ der stabilen Partition $P_G$ eines CR-Graphen $G$ einige Merkmale definiert.
+Um schlussendlich die Frage beantworten zu können von welcher Beschaffenheit CR-Graphen sein müssen, damit sie die in Definition \ref{def:cr-graph2} genannte Eigenschaft erfüllen, werden hier zunächst notwendige, lokale Eigenschaften solcher Graphen vorgestellt.
+Die Basis dieses Kapitels bildet das folgende Lemma, welches für die Zellen $X$ und $Y$ der stabilen Partition $P_G$ eines CR-Graphen $G$ einige Merkmale definiert.
 
 \begin{Lemma}
 	Die Zellen der stabilen Partition $\mathcal{P}_G$ eines CR-Graphen erfüllen folgende Eigenschaften:
