--- a/sec/struktur_lokal.tex
+++ b/sec/struktur_lokal.tex
@@ -18,4 +18,5 @@ Die Basis dieses Kapitels bildet das folgende Lemma, welches für die Zellen $X$
 		\item Für beliebige Zellen $X\in \mathcal{P}_G$ ist $G[X]$ ein leerer Graph, \gls{vollstaendiger_graph}, \gls{matching_graph} $mK_2$, das Komplement eines matching Graphen oder der 5er \gls{zyklus}
 		\item Für beliebige Zellen $X,Y\in \mathcal{P}_G$ ist $G[X,Y]$ ein leerer Graph, \gls{vollstaendiger_bipartiter_graph}, eine \gls{disjunkte_vereinigung_von_sternen} $sK_{1,t}$, bei der $X$ die Menge der $s$ inneren Knoten und $Y$ die Menge der $st$ Blätter ist, oder das \glslink{bipartites_komplement}{bipartite Komplement} des zuletzt genannten Graphen
 	\end{enumerate}
+	\label{lemma:lokal}
 \end{Lemma}
